Problem details migration - init of Interceptors and Proxies (#1465)
* Initial

* Refactoring

* refactored init of interceptors and proxies

* fixed init from merge

* fixed LimitedMemoryExchangeStoreIntegrationTest

* fixed ConfigSerializationTest

* feat(interceptor): print plugin for logging messages

* feat(interceptor): print plugin for logging messages

* refactor(soap):

Fixed deprecation

* docs: roadmap

* refactor: ProblemDetails

* refactor: synchronized on statusCodes

* fix: suppressed error messages in log

* replaced  by

---------

Co-authored-by: Tobias Polley <mail@tobias-polley.de>